fix: correct wrong fontFamliy variable

--- a/src/components/contact-item/contact-item.scss
+++ b/src/components/contact-item/contact-item.scss
@@ -9,7 +9,7 @@
   }
 
   &__content {
-    font-family: $fontFamily;
+    font-family: $cs-fontFamily;
     font-size: 1rem;
     font-weight: $fontWeight;
     line-height: 1.5;
